--- a/Components/Pages/AnnouncementsPage/AnnouncementsPage.css
+++ b/Components/Pages/AnnouncementsPage/AnnouncementsPage.css
@@ -1,38 +1,7 @@
-.projectsPageCol1 {
-	width: 10%;
-}
-.projectsPageCol2 {
-	width: 40%;
-}
-.projectsPageCol3 {
-	width: 25%;
-}
-.projectsPageCol4 {
-	width: 25%;
-}
-
-
-.projectsBackground{
+.announcementsBackground{
 	background-image: url('/assets/images/announcements_watermark.png');
 	height: 80vh;
 	background-size: 100% auto;
 	background-size: cover;
     background-position: 50% 50%;
-}
-
-@media screen and (max-width: 768px){
-
-	.projectsPageCol1 {
-	width: 24%;
-	}
-	.projectsPageCol2 {
-		width: 17%;
-	}
-	.projectsPageCol3 {
-		width: 35%;
-	}
-	.projectsPageCol4 {
-		width: 19%;
-	}
-
 }
