--- a/Components/Pages/AnnouncementsPage/CreateAnnouncement/CreateAnnouncement.css
+++ b/Components/Pages/AnnouncementsPage/CreateAnnouncement/CreateAnnouncement.css
@@ -1,10 +1,8 @@
-#homeworkButton{
-	width: 100%;
-    color: white;
-    background-color: red;
+.messageInput {
+	padding-top: 20px;
 }
 
-.homeworkAssignDiv{
+.announcementsDiv{
     padding-top: 25px;
     padding-right: 56px;
     padding-bottom: 91px;
@@ -12,6 +10,3 @@
     background-color: #e4e3e3;
     margin-bottom: 31px;
 }
- #assignmentInputs {
- 	padding-top: 20px;
- }
