--- a/Components/AbsenceRadialQuest/AbsenceRadialQuest.css
+++ b/Components/AbsenceRadialQuest/AbsenceRadialQuest.css
@@ -1,15 +1,16 @@
 
 
 	h4{
-		color:black;
+		color:grey;
 	}
 	.multRads2{
-		margin-bottom: 3%
+		margin-bottom: 3%;
+		color:grey;
 
 	}
 
 	.absRadQ{
-		font-size: 22px; 
+		font-size: 15px; 
 		margin-left:8%;
 		margin-right: 8%;
 		
@@ -18,10 +19,10 @@
 		margin-left: 10%;
 	}
 	.radio-inline.yesNo{
-		color:black;
+		color:grey;
 		margin-right:22px;
 		padding-left: 12px;
-		font-size: 18px;		
+		font-size: 15px;		
 	}
 	input[type=radio].absCircle{
 		width: 61%;
@@ -29,14 +30,16 @@
 
 @media screen and (max-width: 768px){
 	.absRadQ{
-		font-size: 22px;
+		font-size: 15px;
 		margin-left: 8%;
 		margin-right: 3%;
+		color:grey;
 
 	}
 
 	.multRads2{
 		margin-bottom: 3%;
+		color:grey;
 	}
 
 
@@ -48,6 +51,7 @@
 		margin-left: 9%;
 		font-size: 13px;
 		margin-right: 2%;
+		color:grey;
 
 	}
 	.multRads2{
@@ -67,6 +71,7 @@
 	}
 	.radio-inline.yesNo{
 		font-size: 13px;
+		color:grey;
 	}
 
 
