--- a/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
+++ b/Components/Pages/AbsenceRequestPage/AbsenceRequestPage.css
@@ -5,15 +5,12 @@ h1{
 	color: grey
 }
 
-
-
-
 #sel1{
-	margin-left: 8%;
-	width:84%;
+	margin-left: 2%;
+	width:88%;
 }
 .sel1{
-	margin-left: 20%;
+	margin-left: 2%;
 	color: grey;
 	font-size: 15px;
 	
@@ -35,6 +32,13 @@ h1{
 	margin-left: 7%;
 	font-size: 18px;
 }
+.absenceInput{
+	margin-left: 2%;
+	width: 88%;
+}
+#AbsQuest{
+	margin-left: 2%;
+}
 
 
 
@@ -50,11 +54,11 @@ h1{
 		font-size: 18px;
 	}
 	#sel1{
-		margin-left: 8%;
-		width:84%;
+		margin-left: 2%;
+		width:96%;
 	}
 	.sel1{
-		margin-left: 8%;
+		margin-left: 2%;
 		font-size: 20px;
 	}
 	.absenceInput{
@@ -75,11 +79,11 @@ h1{
 
 @media screen and (max-width: 640px){
 	#sel1{
-		margin-left: 7%;
-		width:86%;
+		margin-left: 5%;
+		width:90%;
 	}
 	.sel1{
-		margin-left: 7%;
+		margin-left: 6%;
 		color:grey;
 		font-size:13px; 
 	}
