--- a/Components/NavBarLink/NavBarLink.css
+++ b/Components/NavBarLink/NavBarLink.css
@@ -1,3 +1,22 @@
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.9s;
+  transition-duration: 0.9s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+
+
+
+
 .NavBarLink_linkText{
 	color: #ddd7d7;
 	font-size: 14px;
