--- a/Components/Pages/TutorRequestPage/TutorRequestPage.css
+++ b/Components/Pages/TutorRequestPage/TutorRequestPage.css
@@ -1,7 +1,10 @@
 .TutorRequestPage_main{
 	max-width: 100%;
     overflow-x: hidden;
+  
 }
+
+
 
 .TutorRequestPage_p{
 	color:#343333;
@@ -12,8 +15,8 @@
 }
 
 .TutorRequestPage_dropdownDiv{
-	color: black;
-	font-size: 22px;
+	color: grey;
+	font-size: 17px;
 	margin: 0% 0% 0% 6%;
 	width: 85%;
 }
@@ -23,26 +26,31 @@
 }
 
 .quesTut{
-	color: black;
+	color: grey;
 	font-family: 'Roboto Condensed', sans-serif; 
-	font-size: 24px;
+	font-size: 15px;
 	margin-left: 6%;
 }
 
 
 #resetButtTut{
-	background-color: gray;
+	background-color: grey;
 	font-size: 18px;
-	margin-left: 70px;
+	margin-left: 53px;
+	color: white;
+	margin-bottom: 20px;
+	margin-right: 10px;
 }
 
 #submitTut{
 	font-size: 18px;
 	background-color: red;
+	color: white;
+	margin-bottom: 20px;
 
 }
 .radioButtTut{
-	color: black;
+	color: grey;
 	font-size: 19px;
 
 }
@@ -59,17 +67,21 @@
 .rightSideTut{
 	float:right;
 	margin: -4% 7% 0% 0%;
+	color: grey;
+	font-size: 15px;
 }
 
 .leftSideTut{ 
 	float:left;
 	margin-left: 6%;
 	margin-top: 3%;
+	color: grey;
+	font-size: 15px;
 }
 
 .TutorRequestPage_comment{
-	color:black;
-	font-size: 22px;
+	color:grey;
+	font-size: 15px;
 	width: 85%;
 	margin-left: 6%;
 }
@@ -79,11 +91,12 @@
 }
 
 .radioButtTut2{
-	color:black;
+	color:grey;
 	display: inline-block;
-	font-size: 20px;
+	font-size: 14px;
 	margin-left: 15%;
 }
+.multiRads4
 
 
 /*input[type=radio].bubble{
@@ -232,7 +245,7 @@
 	}
 	.radioButtTut2{
 		width: 35px;
-		color:black;
+		color:grey;
 		display: inline-block;
 		margin-left: 12%;
 		font-size: 12px;
@@ -240,7 +253,7 @@
 	}
 	.radioButtTut3{
 		margin-left: 11%;
-		color:black;
+		color:grey;
 		font-size: 12px;
 
 	}
@@ -290,6 +303,7 @@
 	#submitTut{
 		background-color: red;
 		font-size: 13px;
+		color: white;
 	}
 	#resetButtTut{
 		margin-left: 7%;
