--- a/Components/Pages/AnnouncementsPage/CreateAnnouncement/CreateAnnouncement.css
+++ b/Components/Pages/AnnouncementsPage/CreateAnnouncement/CreateAnnouncement.css
@@ -1,11 +1,11 @@
 .messageInput {
-	padding-top: 20px;
+	/*padding-top: 20px;*/
 }
 
 .announcementsDiv{
     padding-top: 25px;
     padding-right: 56px;
-    padding-bottom: 91px;
+    padding-bottom: 9px;
     padding-left: 56px;
     background-color: #e4e3e3;
     margin-bottom: 31px;
