modified login demo modal to show up on load

--- a/Components/LoggedIn.css
+++ b/Components/LoggedIn.css
@@ -99,7 +99,7 @@
 	border: none;
 }
 
-.modal-header {
+.navModal-header {
 	border-bottom-color: #EEEEEE;
 	background-color: #343333;
 	padding: 0px;
